Fix invisible gap on pinned beatmap discussion box

--- a/resources/assets/less/bem/beatmap-discussion-new-float.less
+++ b/resources/assets/less/bem/beatmap-discussion-new-float.less
@@ -30,7 +30,6 @@
   }
 
   &__content {
-    padding-top: 10px;
     pointer-events: initial;
   }
 
